[gd_scene load_steps=19 format=3 uid="uid://bbqb1452qr6nu"]

[ext_resource type="PackedScene" uid="uid://butv4eka18auv" path="res://scenes/player.tscn" id="1_4brrt"]
[ext_resource type="Script" uid="uid://b8lei0hxcl2d5" path="res://scenes/test_arena.gd" id="1_htu68"]
[ext_resource type="Texture2D" uid="uid://c8arnlq67qi7" path="res://assets/textures/grids/Dark/texture_05.png" id="2_i8g6w"]
[ext_resource type="Texture2D" uid="uid://c8upf6osvdwx5" path="res://assets/textures/grids/Orange/texture_05.png" id="3_htu68"]
[ext_resource type="Texture2D" uid="uid://dqgbgrchvfwve" path="res://assets/textures/grids/Green/texture_05.png" id="4_gq0uu"]
[ext_resource type="Texture2D" uid="uid://does8rpwjdh1r" path="res://assets/textures/grids/Red/texture_05.png" id="5_ica0y"]
[ext_resource type="Script" uid="uid://calcf0bm026jd" path="res://scripts/static_tracking_camera.gd" id="6_i8g6w"]
[ext_resource type="Script" uid="uid://dwqmq55dpp5tw" path="res://scripts/camera_on_rails.gd" id="8_gq0uu"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_htu68"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_o5qli"]
sky_material = SubResource("ProceduralSkyMaterial_htu68")

[sub_resource type="Environment" id="Environment_gq0uu"]
background_mode = 2
sky = SubResource("Sky_o5qli")
tonemap_mode = 2
sdfgi_enabled = true
glow_enabled = true
fog_enabled = true
fog_light_color = Color(0.644337, 0.675688, 0.724948, 1)
fog_density = 0.001

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_tgj8j"]
albedo_texture = ExtResource("2_i8g6w")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_trud8"]
albedo_texture = ExtResource("3_htu68")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xiblw"]
albedo_texture = ExtResource("4_gq0uu")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1wqxh"]
albedo_texture = ExtResource("5_ica0y")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_edgg4"]
albedo_texture = ExtResource("3_htu68")
uv1_triplanar = true

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ica0y"]
radius = 14.2

[sub_resource type="Curve3D" id="Curve3D_tgj8j"]
closed = true
_data = {
"points": PackedVector3Array(-31.349998, 0, 0.22999999, 31.349998, 0, -0.22999999, 0.049211062, 0.021133423, -31.036346, 0, 0, 0, 0, 0, 0, 31.149035, -7.247925e-05, 0.10279417, 31.21, 0, -0.21, -31.21, 0, 0.21, -0.05842203, -0.022743225, 31.571693, 0, 0, 0, 0, 0, 0, -31.2, -0.100000024, -0.1),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[node name="TestArena" type="Node3D"]
script = ExtResource("1_htu68")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_gq0uu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.24530806, 0.5532758, -0.79605895, 1.3979103e-08, 0.821149, 0.5707139, 0.9694452, 0.14000069, -0.20143448, -10.6018, 18.2278, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_4brrt")]

[node name="environment" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.049999997, 0)
use_collision = true

[node name="floor" type="CSGBox3D" parent="environment"]
size = Vector3(50, 0.1, 50)
material = SubResource("StandardMaterial3D_tgj8j")

[node name="outer walls" type="CSGCombiner3D" parent="environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.049999997, 0)

[node name="CSGBox3D2" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -17.500002, 0.5, -8.950001)
size = Vector3(1, 1, 15)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D3" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -10.000002, 0.5, -16.95)
size = Vector3(1, 1, 16)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D4" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 9.549999, 0.5, -17)
size = Vector3(1, 1, 15)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D5" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 17.55, 0.5, -9.500001)
size = Vector3(1, 1, 16)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D6" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, 17.699999, 0.5, 10.15)
size = Vector3(1, 1, 15)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D7" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 10.199999, 0.5, 18.15)
size = Vector3(1, 1, 16)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D8" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, -9.6500025, 0.5, 18.1)
size = Vector3(1, 1, 15)
material = SubResource("StandardMaterial3D_trud8")

[node name="CSGBox3D9" type="CSGBox3D" parent="environment/outer walls"]
transform = Transform3D(1, 0, -1.7484555e-07, 0, 1, 0, 1.7484555e-07, 0, 1, -17.650002, 0.5, 10.599999)
size = Vector3(1, 1, 16)
material = SubResource("StandardMaterial3D_trud8")

[node name="tower_thing" type="CSGCombiner3D" parent="environment"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.2000003, 0, -2)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="environment/tower_thing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.6, -0.024999812, -5.5)
radius = 4.2000003
height = 1.9500002
sides = 12
material = SubResource("StandardMaterial3D_xiblw")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="environment/tower_thing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.7999997, 1.9500004, -6.4)
radius = 3.0
height = 1.9500002
sides = 12
material = SubResource("StandardMaterial3D_xiblw")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="environment/tower_thing"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.7999997, 3.5625007, -5.7000003)
radius = 1.7
height = 1.3750001
sides = 12
material = SubResource("StandardMaterial3D_xiblw")

[node name="barrels" type="CSGCombiner3D" parent="environment"]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.9000006, 0.29999995, -7.2000003)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.400001, 0.29999995, -11)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10.8, 0.29999995, -10.4)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D4" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12.900001, 0.29999995, -5.1999993)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D5" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 11.900001, 0.29999995, -3.2999992)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D6" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.8, 0.29999995, -2.0999992)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D7" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.7000003, 0.29999995, -11.7)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="CSGCylinder3D8" type="CSGCylinder3D" parent="environment/barrels"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.2000003, 0.29999995, -5.7999997)
radius = 0.7
height = 2.6
material = SubResource("StandardMaterial3D_1wqxh")

[node name="inner_walls" type="CSGCombiner3D" parent="environment"]

[node name="CSGBox3D" type="CSGBox3D" parent="environment/inner_walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 12.1)
size = Vector3(9, 1, 1)
material = SubResource("StandardMaterial3D_edgg4")

[node name="CSGBox3D4" type="CSGBox3D" parent="environment/inner_walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -8, 0, 4.1000004)
size = Vector3(9, 1, 1)
material = SubResource("StandardMaterial3D_edgg4")

[node name="CSGBox3D2" type="CSGBox3D" parent="environment/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 4, 0, 8.1)
size = Vector3(7, 1, 1)
material = SubResource("StandardMaterial3D_edgg4")

[node name="CSGBox3D3" type="CSGBox3D" parent="environment/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -4, 0, 8.1)
size = Vector3(7, 1, 1)
material = SubResource("StandardMaterial3D_edgg4")

[node name="CSGBox3D5" type="CSGBox3D" parent="environment/inner_walls"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -12, 0, 9.650001)
size = Vector3(3.9, 1, 1)
material = SubResource("StandardMaterial3D_edgg4")

[node name="CSGBox3D6" type="CSGBox3D" parent="environment/inner_walls"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -10.5, 0, 12.05)
size = Vector3(3.9, 1, 1)
material = SubResource("StandardMaterial3D_edgg4")

[node name="center_camera" type="Camera3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
fov = 50.0
script = ExtResource("6_i8g6w")
target = NodePath("../Player")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("CylinderShape3D_ica0y")

[node name="orbit_camera" type="Path3D" parent="." node_paths=PackedStringArray("target")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0)
curve = SubResource("Curve3D_tgj8j")
script = ExtResource("8_gq0uu")
target = NodePath("../Player")

[node name="PathFollow3D" type="PathFollow3D" parent="orbit_camera"]
transform = Transform3D(0.0073359637, 0, -0.9999316, 0, 0.9999997, 0, 0.9999316, 0, 0.0073359637, 0.049211062, 0.021133423, -31.036346)

[node name="Camera3D" type="Camera3D" parent="orbit_camera/PathFollow3D"]
fov = 40.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
